--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
-  <title>Frontend Mentor | Easybank landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+  <title>Easybank</title>
+  
   <link rel="stylesheet" href="css/style.css">
   <style>
     .attribution { font-size: 11px; text-align: center; }
