--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Easybank</title>
-  
-  <link rel="stylesheet" href="css/style.css">
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
 
-  <header class="wrapper">
+    <title>Easybank</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <style>
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+    </style>
+  </head>
+  <body>
+    <!-- <header class="wrapper">
     <img src="images/logo.svg" alt="Easybank logo" class="logo">
     <nav>
       <ul>
@@ -28,123 +43,213 @@
         <li><a href="#" class="btn">Request Invite</a></li>
       </ul>
     </nav>
-    <!-- <a href="#" class="btn">Request Invite</a> -->
-  </header>
+     <a href="#" class="btn">Request Invite</a> 
+  </header> -->
 
-  <section id="hero-wrapper">
-    <div class="wrapper">
-      <!-- <div id="hero-wrapper"> -->
-      <div class="intro">
-        <h1>Next generation digital banking</h1>
-        <p>Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">
+          <img
+            src="images/logo.svg"
+            width="100%"
+            height="20"
+            class="logo d-inline-block align-top"
+            alt="Easybank logo"
+          />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link active" href="#"
+              >Home <span class="sr-only">(current)</span></a
+            >
+            <a class="nav-item nav-link" href="#">About</a>
+            <a class="nav-item nav-link" href="#">Contact</a>
+            <a class="nav-item nav-link" href="#blog">Blog</a>
+            <a href="#" class="btn">Request Invite</a>
+          </div>
+        </div>
+      </nav>
+    </div>
+
+    <section id="hero-wrapper">
+      <div class="wrapper">
+        <!-- <div id="hero-wrapper"> -->
+        <div class="intro">
+          <h1>Next generation digital banking</h1>
+          <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <a href="#" class="btn">Request Invite</a>
+        </div>
+      </div>
+      <div class="intro-bg">
+        <img
+          src="images/bg-intro-desktop.svg"
+          alt="Background image"
+          class="intro-bg-0"
+        />
+        <img
+          src="images/image-mockups.png"
+          alt="Easybank mobile applications screenshots"
+          class="intro-bg-1"
+        />
+      </div>
+      <!-- </div> -->
+    </section>
+
+    <section id="why-us">
+      <div class="wrapper">
+        <div id="why-us-msg">
+          <h1>Why choose Easybank?</h1>
+          <p>
+            We leverage Open Banking to turn your bank account into your
+            financial hub. Control your finances like never before.
+          </p>
+        </div>
+        <div class="grid-1-4">
+          <article class="feature">
+            <img src="images/icon-online.svg" alt="" />
+            <h3>Online Banking</h3>
+            <p>
+              Our modern web and mobile applications allow you to keep track of
+              your finances wherever you are in the world.
+            </p>
+          </article>
+          <article class="feature">
+            <img src="images/icon-budgeting.svg" alt="" />
+            <h3>Simple Budgeting</h3>
+            <p>
+              See exactly where your money goes each month. Receive
+              notifications when you’re close to hitting your limits.
+            </p>
+          </article>
+          <article class="feature">
+            <img src="images/icon-onboarding.svg" alt="" />
+            <h3>Fast Onboarding</h3>
+            <p>
+              We don’t do branches. Open your account in minutes online and
+              start taking control of your finances right away.
+            </p>
+          </article>
+          <article class="feature">
+            <img src="images/icon-api.svg" alt="" />
+            <h3>Open API</h3>
+            <p>
+              Manage your savings, investments, pension, and much more from one
+              account. Tracking your money has never been easier.
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <section id="blog">
+      <div class="wrapper">
+        <h1>Latest Articles</h1>
+        <div class="grid-1-4">
+          <article class="article">
+            <img src="images/image-currency.jpg" alt="" />
+            <span>By Claire Robinson</span>
+            <h4>Receive money in any currency with no fees</h4>
+            <p>
+              The world is getting smaller and we’re becoming more mobile. So
+              why should you be forced to only receive money in a single …
+            </p>
+          </article>
+          <article class="article">
+            <img src="images/image-restaurant.jpg" alt="" />
+            <span>By Wilson Hutton</span>
+            <h4>Treat yourself without worrying about money</h4>
+            <p>
+              Our simple budgeting feature allows you to separate out your
+              spending and set realistic limits each month. That means you …
+            </p>
+          </article>
+          <article class="article">
+            <img src="images/image-plane.jpg" alt="" />
+            <span>By Wilson Hutton</span>
+            <h4>Take your Easybank card wherever you go</h4>
+            <p>
+              We want you to enjoy your travels. This is why we don’t charge any
+              fees on purchases while you’re abroad. We’ll even show you …
+            </p>
+          </article>
+          <article class="article">
+            <img src="images/image-confetti.jpg" alt="" />
+            <span>By Claire Robinson</span>
+            <h4>Our invite-only Beta accounts are now live!</h4>
+            <p>
+              After a lot of hard work by the whole team, we’re excited to
+              launch our closed beta. It’s easy to request an invite through the
+              site ...
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <footer class="wrapper">
+      <div>
+        <img src="images/logo.svg" alt="Easybank logo" class="logo" />
+        <div class="social">
+          <img src="images/icon-facebook.svg" alt="facebook" />
+          <img src="images/icon-youtube.svg" alt="youtube" />
+          <img src="images/icon-twitter.svg" alt="twitter" />
+          <img src="images/icon-pinterest.svg" alt="pinterest" />
+          <img src="images/icon-instagram.svg" alt="instagram" />
+        </div>
+      </div>
+
+      <div>
+        <ul class="navigation">
+          <li><a href="">About Us</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Blog</a></li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li><a href="">Careers</a></li>
+          <li><a href="">Support</a></li>
+          <li><a href="">Privacy Policy</a></li>
+        </ul>
+      </div>
+
+      <div>
         <a href="#" class="btn">Request Invite</a>
-      </div>
-    </div>
-    <div class="intro-bg">
-        <img src="images/bg-intro-desktop.svg" alt="Background image" class="intro-bg-0">
-        <img src="images/image-mockups.png" alt="Easybank mobile applications screenshots" class="intro-bg-1">
-    </div>
-    <!-- </div> -->
-  </section>
+        <p>© Easybank. All Rights Reserved</p>
 
-  <section id="why-us">
-    <div class="wrapper">
-      <div id="why-us-msg">
-        <h1>Why choose Easybank?</h1>
-        <p>We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
+        <div class="attribution">
+          Coded by
+          <a href="https://www.linkedin.com/in/rishavbharti/" target="_blank"
+            >Rishav Bharti</a
+          >.
+        </div>
       </div>
-      <div class="grid-1-4">
-        <article class="feature">
-          <img src="images/icon-online.svg" alt="">
-          <h3>Online Banking</h3>
-          <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
-        </article>
-        <article class="feature">
-          <img src="images/icon-budgeting.svg" alt="">
-          <h3>Simple Budgeting</h3>
-          <p>See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
-        </article>
-        <article class="feature">
-          <img src="images/icon-onboarding.svg" alt="">
-          <h3>Fast Onboarding</h3>
-          <p>We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
-        </article>
-        <article class="feature">
-          <img src="images/icon-api.svg" alt="">
-          <h3>Open API</h3>
-          <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
-        </article>
-      </div>
-    </div>
-  </section>
+    </footer>
 
-  <section id="blog">
-    <div class="wrapper">
-      <h1>Latest Articles</h1>
-      <div class="grid-1-4">
-        <article class="article">
-          <img src="images/image-currency.jpg" alt="">
-          <span>By Claire Robinson</span>
-          <h4>Receive money in any currency with no fees</h4>
-          <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
-        </article>
-        <article class="article">
-          <img src="images/image-restaurant.jpg" alt="">
-          <span>By Wilson Hutton</span>
-          <h4>Treat yourself without worrying about money</h4>
-          <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
-        </article>
-        <article class="article">
-          <img src="images/image-plane.jpg" alt="">
-          <span>By Wilson Hutton</span>
-          <h4>Take your Easybank card wherever you go</h4>
-          <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
-        </article>
-        <article class="article">
-          <img src="images/image-confetti.jpg" alt="">
-          <span>By Claire Robinson</span>
-          <h4>Our invite-only Beta accounts are now live!</h4>
-          <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site ...</p>
-        </article>
-      </div>
-    </div>
-  </section>  
-
-  <footer class="wrapper">
-    <div>
-      <img src="images/logo.svg" alt="Easybank logo" class="logo">
-      <div class="social">
-        <img src="images/icon-facebook.svg" alt="facebook">
-        <img src="images/icon-youtube.svg" alt="youtube">
-        <img src="images/icon-twitter.svg" alt="twitter">
-        <img src="images/icon-pinterest.svg" alt="pinterest">
-        <img src="images/icon-instagram.svg" alt="instagram">
-      </div>
-    </div>
-    
-    <div>
-      <ul class="navigation">
-        <li><a href="">About Us</a></li>
-        <li><a href="">Contact</a></li>
-        <li><a href="">Blog</a></li>
-      </ul>
-    </div>
-    <div>
-      <ul>
-        <li><a href="">Careers</a></li>
-        <li><a href="">Support</a></li>
-        <li><a href="">Privacy Policy</a></li>
-      </ul>
-    </div>
-    
-    <div>
-      <a href="#" class="btn">Request Invite</a>
-      <p>© Easybank. All Rights Reserved</p>
-
-      <div class="attribution">
-        Coded by <a href="https://www.linkedin.com/in/rishavbharti/" target="_blank">Rishav Bharti</a>.
-      </div>
-    </div>
-  </footer>
-</body>
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
